syntax = "proto3";

package razpravljalnica;

option go_package = "github.com/AuraDvin/razpravljalnica/grpc/protobufStorage";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

////////////////////////////////////////////////////////////////////////////////
// Basic data types
////////////////////////////////////////////////////////////////////////////////

message User {
  int64 id = 1;
  string name = 2;
}

message Topic {
  int64 id = 1;
  string name = 2;
}

message Message {
  int64 id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
  int32 likes = 6;
}

message Like {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3; // user who liked the message
}

enum OpType {
  OP_POST = 0;         // add a message to a topic
  OP_LIKE = 1;         // like a message
  OP_CREATE_USER = 2;  // create a new user
  OP_CREATE_TOPIC = 3; // create a new topic
}

message NodeInfo {
  string node_id = 1;
  string address = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Request/Response Messages
////////////////////////////////////////////////////////////////////////////////

message CreateUserRequest {
  string name = 1;
}

message CreateTopicRequest {
  string name = 1;
}

message PostMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  string text = 3;
}

message LikeMessageRequest {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3; // user who posted the like
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message GetMessagesRequest {
  int64 topic_id = 1;
  int64 from_message_id = 2; // starting id of the message (0 from beginning)
  int32 limit = 3; // max number of messages
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message SubscribeTopicRequest {
  repeated int64 topic_id = 1;
  int64 user_id = 2;
  int64 from_message_id = 3; // starting id of the message
  string subscribe_token = 4; // token generated by the head used to authorize the subscription
}

message SubscriptionNodeRequest {
  int64 user_id = 1;
  repeated int64 topic_id = 2;
}

message SubscriptionNodeResponse {
  string subscribe_token = 1; // subscription token to be presented to the returned node
  NodeInfo node = 2;
}

message MessageEvent {
  int64 sequence_number = 1; // monotonically increasing event number
  OpType op = 2; // type of event
  Message message = 3;
  google.protobuf.Timestamp event_at = 4; // timestamp of the event
}

////////////////////////////////////////////////////////////////////////////////
// Services - Data plane
////////////////////////////////////////////////////////////////////////////////

service MessageBoard {
  // Writes (only to head)

  // Creates a new user and assigns it an id
  rpc CreateUser(CreateUserRequest) returns (User);

  // Creates a new topic to which users can post messages
  rpc CreateTopic(CreateTopicRequest) returns (Topic);

  // Post a message to a topic; Succeed only if the User and the Topic exist in the database.
  rpc PostMessage(PostMessageRequest) returns (Message);

  // Like an existing message. Return the message with the new number of likes.
  rpc LikeMessage(LikeMessageRequest) returns (Message);

  // Request a node to which a subscription can be opened.
  rpc GetSubscriptionNode(SubscriptionNodeRequest) returns (SubscriptionNodeResponse);

  // Reads go to the tail node

  // Get user by ID
  rpc GetUser(GetUserRequest) returns (User);

  // Returns all the topics
  rpc ListTopics(google.protobuf.Empty) returns (ListTopicsResponse);

  // Returns messages in a topic
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

  // Subscribe to topics; goes to the node returned by head
  rpc SubscribeTopic(SubscribeTopicRequest) returns (stream MessageEvent);
}

message GetUserRequest {
  int64 id = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Chain Replication Messages
////////////////////////////////////////////////////////////////////////////////

message ReplicateWriteRequest {
  int64 sequence_number = 1;
  OpType op = 2; // OP_POST or OP_LIKE
  Message message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message ReplicateWriteAck {
  int64 sequence_number = 1;
  bool success = 2;
  string error_message = 3;
}

enum ServerRole {
  HEAD = 0;
  MIDDLE = 1;
  TAIL = 2;
}

message ServerRegistration {
  string server_address = 1;
  ServerRole role = 2;
}

message ServerStatus {
  string server_address = 1;
  int64 active_subscriptions = 2;
}

message ServerInfo {
  string address = 1;
  ServerRole role = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Services - Control plane
////////////////////////////////////////////////////////////////////////////////

// Return the head and the tail node address
service ControlPlane {
  rpc GetClusterState(google.protobuf.Empty) returns (GetClusterStateResponse);
  
  // Register a server with the control plane
  rpc RegisterServer(ServerRegistration) returns (google.protobuf.Empty);
  
  // Get the head server address
  rpc GetHeadServer(google.protobuf.Empty) returns (ServerInfo);
  
  // Get a subscription server (load-balanced by least connections)
  rpc GetSubscriptionServer(google.protobuf.Empty) returns (ServerInfo);
  
  // Report subscription count from a server
  rpc ReportSubscriptionCount(ServerStatus) returns (google.protobuf.Empty);
}

message GetClusterStateResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Services - Chain Replication (inter-server communication)
////////////////////////////////////////////////////////////////////////////////

service ChainReplication {
  // Replicate a write operation to the next server in chain
  rpc ReplicateWrite(ReplicateWriteRequest) returns (ReplicateWriteAck);
}